@@ -705,7 +705,7 @@ body {
 
 <p><strong>button_permadeath</strong> | <code>int, int, alignment : X, Y, Alignment</code> | Position of checkbox for toggling permadeath.</p>
 
-<p><strong>bytton_randomize</strong> | <code>int, int, alignment : X, Y, Alignment</code> | Position of the &ldquo;Randomize&rdquo; button.</p>
+<p><strong>button_randomize</strong> | <code>int, int, alignment : X, Y, Alignment</code> | Position of the &ldquo;Randomize&rdquo; button.</p>
 
 <p><strong>name_input</strong> | <code>int, int, alignment : X, Y, Alignment</code> | Position of the hero name textbox.</p>
 
@@ -724,6 +724,8 @@ body {
 <p><strong>class_list</strong> | <code>int, int, alignment : X, Y, Alignment</code> | Position of the class list.</p>
 
 <p><strong>show_classlist</strong> | <code>bool</code> | Allows hiding the class list.</p>
+
+<p><strong>show_randomize</strong> | <code>bool</code> | Toggles the visibility of the &ldquo;Randomize&rdquo; button.</p>
 
 <p><strong>random_option</strong> | <code>bool</code> | Initially picks a random character option (aka portrait/name).</p>
 
